[gd_scene load_steps=14 format=3 uid="uid://dxljrfefydguf"]

[ext_resource type="Script" uid="uid://esvn0ixir3ih" path="res://components/projectiles/bubble_shooter_proto.gd" id="1_aeswd"]
[ext_resource type="PackedScene" uid="uid://cx05cla7f21ru" path="res://components/projectiles/Bubble.tscn" id="2_bl0qu"]
[ext_resource type="Resource" uid="uid://c6hxwjll2q02e" path="res://components/projectiles/regular_bubble_test.tres" id="3_8s3vh"]
[ext_resource type="AudioStream" uid="uid://dpmvpeacdgttj" path="res://assets/Sounds/Pop1.wav" id="3_8u0md"]
[ext_resource type="AudioStream" uid="uid://bs77hbmxr5c4b" path="res://assets/Sounds/Pop2.wav" id="4_6c2pl"]
[ext_resource type="AudioStream" uid="uid://bu1phj6lwxuc0" path="res://assets/Sounds/Pop3.wav" id="5_aeswd"]
[ext_resource type="AudioStream" uid="uid://dj87tt4x6apjj" path="res://assets/Sounds/Inflating.wav" id="6_6c2pl"]
[ext_resource type="AudioStream" uid="uid://dmgj0lydopl3e" path="res://assets/Sounds/Spit.wav" id="7_aeswd"]
[ext_resource type="AudioStream" uid="uid://vvvshv7crppb" path="res://assets/Sounds/Boing.wav" id="8_c18lt"]
[ext_resource type="AudioStream" uid="uid://bkvivcjgubds8" path="res://assets/Sounds/warning-chime.wav" id="10_8s3vh"]
[ext_resource type="PackedScene" uid="uid://dwlvbaepcdeim" path="res://components/Player/shooter_spring_arm.tscn" id="11_ei10r"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_c18lt"]
random_pitch = 1.4
random_volume_offset_db = 1.0
streams_count = 3
stream_0/stream = ExtResource("3_8u0md")
stream_1/stream = ExtResource("4_6c2pl")
stream_2/stream = ExtResource("5_aeswd")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m6urg"]
streams_count = 1
stream_0/stream = ExtResource("8_c18lt")

[node name="Node2D" type="Node2D"]
z_index = 1
script = ExtResource("1_aeswd")
ProjectileScene = ExtResource("2_bl0qu")
bubble_definition = ExtResource("3_8s3vh")

[node name="PopAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_c18lt")
volume_db = 1.0

[node name="InflateAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6c2pl")
volume_db = -8.0

[node name="SpitPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_aeswd")
volume_db = 3.0
pitch_scale = 0.8

[node name="BoingPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_m6urg")
volume_db = -3.0

[node name="WarningPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_8s3vh")
volume_db = -30.0

[node name="ShooterOffset" parent="." instance=ExtResource("11_ei10r")]
